<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">PROFIT</string>
    <string name="default_lang">id</string>
    <string name="id_lang">in</string>
    <string name="id_country">IN</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="menu_home">Beranda</string>
    <string name="menu_sell">Penjualan</string>
    <string name="menu_qris">Pembayaran QR</string>
    <string name="menu_history">Histori Transaksi</string>
    <string name="menu_report">Laporan</string>
    <string name="menu_management">Kelola Toko</string>
    <string name="menu_setting">Pengaturan</string>
    <string name="menu_help">Bantuan</string>
    <string name="menu_category">Kategori Produk</string>
    <string name="menu_add_category">Tambah Kategori</string>
    <string name="menu_edit_category">Edit Kategori</string>
    <string name="menu_add_supplier">Tambah Supplier</string>
    <string name="menu_edit_supplier">Edit Supplier</string>
    <string name="menu_add_customer">Tambah Pelanggan</string>
    <string name="menu_edit_customer">Edit Pelanggan</string>
    <string name="menu_add_product">Tambah Barang</string>
    <string name="menu_edit_product">Edit Barang</string>
    <string name="menu_scan_barcode">Scan Barcode</string>
    <string name="menu_detail_transaction">Detail Transaksi</string>
    <string name="menu_hutang_piutang">Hutang/Piutang</string>
    <string name="menu_hutang_supplier">Daftar Hutang Supplier</string>
    <string name="menu_piutang_customer">Daftar Piutang Pelanggan</string>
    <string name="menu_piutang_customer_all">Piutang Terakhir</string>
    <string name="menu_hutang_supplier_all">Hutang Terakhir</string>
    <string name="menu_choose_product">Pilih Barang</string>
    <string name="menu_sell_manual">Penjualan</string>
    <string name="menu_choose_customer">Pilih Pelanggan</string>
    <string name="menu_choose_supplier">Pilih Supplier</string>
    <string name="reason_permission_read_phone_state">Anda harus memberikan izin untuk mengakses IMEI dari perangkat Anda</string>
    <string name="reason_permission_location">Izinkan untuk mendapatkan lokasi dari perangkat Anda</string>
    <string name="reason_permission_camera">Anda harus memberikan izin sebelum dapat menggunakan kamera dan penyimpanan</string>
    <string name="reason_permission_bluetooth">Izinkan untuk mengakses bluetooth dari perangkat Anda</string>
    <string name="reason_permission_write_external">Izinkan untuk menyimpan gambar ke perangkat Anda</string>
    <string name="lbl_tagline_1">Kelola Toko dengan Mudah!</string>
    <string name="lbl_tagline_2">Silahkan masuk dan kelola kebutuhan toko Anda!</string>
    <string name="lbl_welcome">Selamat Datang!</string>
    <string name="lbl_tagline_3">Daftarkan warung Anda dan nikmati kemudahannya.</string>
    <string name="lbl_tagline_4">Kelola semua kebutuhan toko Anda</string>
    <string name="lbl_title_manage">Cek sesuaikan data barang, kategori produk,\ndata pelanggan, data supplier dan hutang piutang\nToko Anda</string>
    <string name="lbl_manage_produk_title">Data Barang</string>
    <string name="lbl_manage_produk_info">Atur Data Barang Toko Anda!</string>
    <string name="lbl_manage_kategori_title">Kategori Produk</string>
    <string name="lbl_manage_kategori_info">Atur Kategori Produk Toko Anda!</string>
    <string name="lbl_manage_discount_title">Diskon Barang</string>
    <string name="lbl_manage_discount_info">Atur Diskon Toko Anda!</string>
    <string name="lbl_manage_supplier_title">Data Supplier</string>
    <string name="lbl_manage_supplier_info">Cek Data Supplier Toko Anda!</string>
    <string name="lbl_manage_pelanggan_title">Data Pelanggan</string>
    <string name="lbl_manage_pelanggan_info">Cek Data Pelanggan Anda!</string>
    <string name="lbl_manage_credit_title">Hutang / Piutang</string>
    <string name="lbl_manage_credit_info">Cek Hutang/Piutang Toko Anda!</string>
    <string name="lbl_manage_kulakan_title">Barang Kulakan</string>
    <string name="lbl_manage_kulakan_info">Atur Barang Kulakan Toko Anda!</string>
    <string name="lbl_title_report">Cek stok barang, transaksi,laba rugi, dan mutasi\nToko Anda</string>
    <string name="lbl_report_produk_title">Stok Barang</string>
    <string name="lbl_report_produk_info">Cek stok barang Anda!</string>
    <string name="lbl_report_kulakan_title">Histori Kulakan</string>
    <string name="lbl_report_kulakan_info">Cek histori kulakan Anda!</string>
    <string name="lbl_report_transaksi_title">Transaksi</string>
    <string name="lbl_report_transaksi_info">Cek transaksi toko Anda!</string>
    <string name="lbl_report_profit_title">Laba Rugi</string>
    <string name="lbl_report_profit_info">Cek laba rugi toko Anda!</string>
    <string name="lbl_report_mutasi_title">Mutasi Kas</string>
    <string name="lbl_report_mutasi_info">Cek mutasi kas toko Anda!</string>
    <string name="lbl_input_name_title">Nama barang</string>
    <string name="lbl_input_name_info">Masukkan nama barang. Contoh: Minyak goreng</string>
    <string name="lbl_input_category_title">Kategori barang</string>
    <string name="lbl_input_category_info">Pilih kategori barang</string>
    <string name="lbl_input_price_stock_title">Harga &amp; Stok Barang</string>
    <string name="lbl_input_price_sell_title">Harga Jual</string>
    <string name="lbl_input_price_buy_title">Harga Beli</string>
    <string name="lbl_input_stock_title">Stok Barang</string>
    <string name="lbl_input_minstock_title">Minimum Stok</string>
    <string name="lbl_input_desc_title">Keterangan Barang</string>
    <string name="lbl_input_discount_title">Diskon Barang</string>
    <string name="lbl_input_barcode_title">Barcode</string>
    <string name="lbl_input_barcode_info">Masukkan barcode</string>
    <string name="lbl_piutang_sum">Jumlah Piutang</string>
    <string name="lbl_hutang_sum">Jumlah Hutang</string>
    <string name="lbl_hutang_supplier">Ke Supplier</string>
    <string name="lbl_piutang_customer">Pelanggan</string>
    <string name="lbl_hutang_rp">(Rp)</string>
    <string name="lbl_hutang">Hutang</string>
    <string name="lbl_piutang">Piutang</string>
    <string name="lbl_transaksi">Transaksi</string>
    <string name="lbl_hutang_belum_lunas">Belum Lunas</string>
    <string name="lbl_hutang_jatuh_tempo">Jatuh Tempo</string>
    <string name="lbl_hutang_terakhir">Hutang Terakhir</string>
    <string name="lbl_piutang_terakhir">Piutang Terakhir</string>
    <string name="lbl_tagihan">Jumlah Tagihan</string>
    <string name="lbl_jumlah_yang_dibayarkan">Jumlah yang sudah dibayarkan</string>
    <string name="lbl_total_yang_dibayarkan">Total yang sudah dibayarkan</string>
    <string name="lbl_hutang_nominal">Nominal</string>
    <string name="lbl_full_name">Nama Lengkap</string>
    <string name="lbl_name">Nama</string>
    <string name="lbl_name_hint">Masukkan Nama Lengkap Anda</string>
    <string name="lbl_phone">No. Handphone</string>
    <string name="lbl_phone_hint">Masukkan No. Handphone Anda</string>
    <string name="lbl_email">Email</string>
    <string name="lbl_email_hint">Masukkan Email Anda</string>
    <string name="lbl_nama_toko">Nama Toko</string>
    <string name="lbl_nama_toko_hint">Masukkan Nama Toko Anda</string>
    <string name="lbl_address">Alamat</string>
    <string name="lbl_address_hint">Masukkan Alamat Anda</string>
    <string name="lbl_province">Provinsi</string>
    <string name="lbl_province_hint">Provinsi Anda</string>
    <string name="lbl_city">Kota/Kabupaten</string>
    <string name="lbl_city_hint">Kota Anda</string>
    <string name="lbl_district">Kecamatan</string>
    <string name="lbl_district_hint">Kecamtan Anda</string>
    <string name="lbl_postcode">Kode Pos</string>
    <string name="lbl_postcode_hint">Kode Pos Anda</string>
    <string name="lbl_phone_login">No. Handphone Anda</string>
    <string name="lbl_password_login">Password Anda</string>
    <string name="lbl_omset">Omzet Toko Anda</string>
    <string name="lbl_phone_2">No. HP</string>
    <string name="lbl_rp_0">Rp 0</string>
    <string name="lbl_search_product">Cari Barang</string>
    <string name="lbl_search_category">Cari Kategori</string>
    <string name="lbl_search_discount">Cari Diskon</string>
    <string name="lbl_search_customer">Cari Pelanggan</string>
    <string name="lbl_search_supplier">Cari Supplier</string>
    <string name="lbl_search_staff">Cari Staff</string>
    <string name="lbl_search_customer_piutang">Cari Pelanggan Piutang</string>
    <string name="lbl_search_transaction">Cari Transaksi</string>
    <string name="lbl_search_invoice">Masukkkan nomor invoice</string>
    <string name="lbl_search_product_transaction">Cari transaksi barang</string>
    <string name="lbl_category_title">Kategori Produk</string>
    <string name="lbl_category_hint">Nama Kategori Produk</string>
    <string name="lbl_name_supplier">Nama Supplier</string>
    <string name="lbl_name_supplier_hint">Masukkan Nama Lengkap Supplier Anda</string>
    <string name="lbl_phone_supplier_hint">Masukkan No. Handphone Supplier Anda</string>
    <string name="lbl_email_supplier_hint">Masukkan Email Supplier Anda</string>
    <string name="lbl_address_supplier_hint">Masukkan Alamat Supplier Anda</string>
    <string name="lbl_setting_account_title">Akun</string>
    <string name="lbl_setting_account_info">Data Diri, Alamat dan Keamanan Akun</string>
    <string name="lbl_setting_store_title">Toko</string>
    <string name="lbl_setting_store_info">Profile Toko, Lokasi Toko dan Telepon Toko</string>
    <string name="lbl_setting_printer_title">Printer</string>
    <string name="lbl_setting_printer_info">Pengaturan Printer</string>
    <string name="lbl_setting_staff_title">Data Staff</string>
    <string name="lbl_setting_staff_info">Aset Data Staff, Tambah Staff, Status Staff</string>
    <string name="lbl_setting_privacy_title">Kebijakan Privasi</string>
    <string name="lbl_setting_term_title">Syarat &amp; Ketentuan</string>
    <string name="lbl_setting_help_title">Pusat Bantuan</string>
    <string name="lbl_detail_id">ID Transaksi:</string>
    <string name="lbl_detail_datetime">Tanggal</string>
    <string name="lbl_detail_payment_method">Metode Pembayaran</string>
    <string name="lbl_detail_operator">Operator</string>
    <string name="lbl_detail_customer">Pelanggan</string>
    <string name="lbl_detail_supplier">Supplier</string>
    <string name="lbl_detail_products">Daftar Produk</string>
    <string name="lbl_detail_subtotal">Subtotal</string>
    <string name="lbl_detail_total">Total</string>
    <string name="lbl_detail_total_item">Total Item</string>
    <string name="lbl_detail_bayar">Bayar</string>
    <string name="btn_save">Simpan</string>
    <string name="roboto_regular">fonts/Roboto-Regular.ttf</string>
    <string name="hint_no_rekening">Nomor Rekening</string>
    <string name="hint_tarik_nominal">Nominal Yang Ditarik</string>
    <string name="hint_kritik_saran"><![CDATA[Isi Komplain di sini]]></string>
    <string name="lanjutkan">Lanjutkan</string>
    <string name="simpan_norek_pelanggan">Simpan No Rekening Pelanggan</string>
    <string name="locale">in_ID</string>
    <string name="string_header_kritik"><![CDATA[Pilih Kategori Saran & Kritik]]></string>
    <string name="rate_message">Jika Anda menyukai %s, maukah Anda memberikan rating kepada aplikasi ini? Rating hanya memakan waktu kurang dari 1 menit. Terimakasih untuk dukungan Anda!</string>
    <string name="rate">Rating %s</string>
    <string name="rate_later">Silakan ingatkan saya lagi</string>
    <string name="rate_cancel">Tidak, terimakasih</string>
    <string name="love_dialog_content">Apakah Anda menyukai Aplikasi Fastpay Mobile ini ?</string>
    <string name="love_dialog_yes">Ya</string>
    <string name="love_dialog_no">Tidak</string>
</resources>