<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:padding="10dp"
    android:id="@+id/contentHost">

    <TextView
        android:id="@+id/message"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:text="@string/rate_message" android:fontFamily="@font/roboto_regular"
        />

    <Button
        android:id="@+id/rate"
        android:background="@drawable/button_appirator"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="10dp"
        android:text="@string/rate"
        android:textColor="@color/md_white_1000"
        android:fontFamily="@font/roboto_regular"/>

    <Button
        android:id="@+id/rateLater"
        android:background="@drawable/selector_button_grey_pressed"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="10dp"
        android:text="@string/rate_later"
        android:fontFamily="@font/roboto_regular"/>

    <Button
        android:id="@+id/cancel"
        android:background="@drawable/selector_button_grey_pressed"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="10dp"
        android:text="@string/rate_cancel" android:fontFamily="@font/roboto_regular"/>

</LinearLayout>