<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg_gray">

    <FrameLayout android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fillViewport="true">
            <LinearLayout
                android:paddingLeft="@dimen/standard_margin_2x"
                android:paddingRight="@dimen/standard_margin_2x"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">
                <TextView
                    android:layout_marginTop="@dimen/standard_margin_3x"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/lbl_name_supplier"
                    android:textColor="@color/primaryText"
                    android:textStyle="bold"
                    android:textSize="@dimen/body"/>
                <EditText
                    android:layout_marginTop="@dimen/standard_small_margin"
                    android:padding="@dimen/standard_margin"
                    android:layout_gravity="center"
                    android:inputType="textPersonName"
                    android:id="@+id/et_name"
                    android:hint="@string/lbl_name_supplier_hint"
                    android:textColorHint="@color/secondaryText"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/standart_input_height"
                    android:background="@drawable/rounded_white_4dp_stroke_gray"
                    android:textColor="@color/primaryText"
                    android:textSize="@dimen/body"
                    />
                <TextView
                    android:layout_marginTop="@dimen/standard_margin"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/lbl_phone"
                    android:textColor="@color/primaryText"
                    android:textStyle="bold"
                    android:textSize="@dimen/body"/>
                <EditText
                    android:layout_marginTop="@dimen/standard_small_margin"
                    android:padding="@dimen/standard_margin"
                    android:layout_gravity="center"
                    android:inputType="number"
                    android:maxLength="16"
                    android:id="@+id/et_phone"
                    android:hint="@string/lbl_phone_supplier_hint"
                    android:textColorHint="@color/secondaryText"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/standart_input_height"
                    android:background="@drawable/rounded_white_4dp_stroke_gray"
                    android:textColor="@color/primaryText"
                    android:textSize="@dimen/body"
                    />
                <TextView
                    android:layout_marginTop="@dimen/standard_margin"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/lbl_email"
                    android:textColor="@color/primaryText"
                    android:textStyle="bold"
                    android:textSize="@dimen/body"/>
                <EditText
                    android:layout_marginTop="@dimen/standard_small_margin"
                    android:padding="@dimen/standard_margin"
                    android:layout_gravity="center"
                    android:inputType="textEmailAddress"
                    android:id="@+id/et_mail"
                    android:hint="@string/lbl_email_supplier_hint"
                    android:textColorHint="@color/secondaryText"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/standart_input_height"
                    android:background="@drawable/rounded_white_4dp_stroke_gray"
                    android:textColor="@color/primaryText"
                    android:textSize="@dimen/body"
                    />
                <TextView
                    android:layout_marginTop="@dimen/standard_margin"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/lbl_address"
                    android:textColor="@color/primaryText"
                    android:textStyle="bold"
                    android:textSize="@dimen/body"/>
                <EditText
                    android:layout_marginTop="@dimen/standard_small_margin"
                    android:padding="@dimen/standard_margin"
                    android:layout_gravity="center"
                    android:inputType="textPostalAddress"
                    android:id="@+id/et_address"
                    android:hint="@string/lbl_address_supplier_hint"
                    android:textColorHint="@color/secondaryText"
                    android:layout_width="match_parent"
                    android:layout_height="80dp"
                    android:background="@drawable/rounded_white_4dp_stroke_gray"
                    android:textColor="@color/primaryText"
                    android:textSize="@dimen/body"
                    android:maxLength="100"
                    android:gravity="top"
                    android:scrollbars="vertical"
                    />
                <TextView
                    android:layout_marginTop="@dimen/standard_margin"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/lbl_province"
                    android:textColor="@color/primaryText"
                    android:textStyle="bold"
                    android:textSize="@dimen/body"/>
                <TextView
                    android:layout_marginTop="@dimen/standard_small_margin"
                    android:padding="@dimen/standard_margin"
                    android:layout_gravity="center"
                    android:id="@+id/et_province"
                    android:hint="@string/lbl_province_hint"
                    android:textColorHint="@color/secondaryText"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/standart_input_height"
                    android:background="@drawable/rounded_white_4dp_stroke_gray"
                    android:textColor="@color/primaryText"
                    android:textSize="@dimen/body"
                    android:drawableRight="@drawable/selector_dropdown"
                    android:drawableEnd="@drawable/selector_dropdown"
                    android:drawablePadding="@dimen/standard_xsmall_margin"
                    />
                <TextView
                    android:layout_marginTop="@dimen/standard_margin"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/lbl_city"
                    android:textColor="@color/primaryText"
                    android:textStyle="bold"
                    android:textSize="@dimen/body"/>
                <TextView
                    android:layout_marginTop="@dimen/standard_small_margin"
                    android:padding="@dimen/standard_margin"
                    android:layout_gravity="center"
                    android:id="@+id/et_city"
                    android:hint="@string/lbl_city_hint"
                    android:textColorHint="@color/secondaryText"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/standart_input_height"
                    android:background="@drawable/rounded_white_4dp_stroke_gray"
                    android:textColor="@color/primaryText"
                    android:textSize="@dimen/body"
                    android:drawableRight="@drawable/selector_dropdown"
                    android:drawableEnd="@drawable/selector_dropdown"
                    android:drawablePadding="@dimen/standard_xsmall_margin"
                    />
                <com.google.android.material.button.MaterialButton
                    android:layout_gravity="bottom|center_horizontal"
                    android:layout_marginTop="@dimen/standard_margin_3x"
                    android:layout_marginBottom="@dimen/standard_margin_2x"
                    android:id="@+id/btn_save"
                    android:layout_width="@dimen/standart_button_width"
                    android:layout_height="wrap_content"
                    android:textColor="@color/white"
                    android:textSize="@dimen/subheading"
                    android:text="@string/btn_save"
                    android:textAllCaps="false"
                    android:gravity="center"
                    android:textStyle="bold"
                    app:backgroundTint="@color/orange"
                    />
                <View
                    android:id="@+id/empty_space"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"/>

            </LinearLayout>
        </androidx.core.widget.NestedScrollView>


    </FrameLayout>


</androidx.coordinatorlayout.widget.CoordinatorLayout>