<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"

    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:tools="http://schemas.android.com/tools"

    android:orientation="vertical">



        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:layout_marginBottom="10dp"
            android:orientation="horizontal"
            android:weightSum="2">
            <com.bm.main.materialedittext.MaterialEditText
                android:id="@+id/materialEditTextNoRekTarik"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"

                android:layout_marginBottom="5dp"

                android:hint="@string/hint_no_rekening"
                android:imeOptions="actionNext"
                android:inputType="number"
                android:digits="01234567890"
                android:textCursorDrawable="@drawable/text_cursor_accent"
                android:textSize="@dimen/textNormal"
                android:maxLength="19"
                android:fontFamily="@font/roboto_light"
                app:met_baseColor="@color/text_secondary"
                app:met_floatingLabel="highlight"

                app:met_floatingLabelTextColor="@color/md_black_1000"
                app:met_floatingLabelAnimating="true"
                app:met_accentTypeface="@string/roboto_regular"

                app:met_underlineColor="@color/md_grey_500"
                app:met_primaryColor="@color/colorAccent_ppob"
                app:met_singleLineEllipsis="true"
                app:met_clearButton="true"
                />
            <ImageView android:id="@+id/imageViewAddressBookTarik"
                android:layout_width="25dp"
                android:layout_height="25dp"

                android:layout_gravity="center"
                android:layout_marginBottom="5dp"
                android:layout_marginLeft="-20dp"
                android:layout_marginStart="-20dp"
                android:adjustViewBounds="true"
                android:src="@drawable/ic_address_book"
                tools:ignore="ContentDescription" />
        </LinearLayout>

        <com.bm.main.fpl.templates.CustomFontCheckBox
            android:id="@+id/checkboxSimpanNoRekTarik"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/simpan_norek_pelanggan"
            android:checked="false"/>
        <com.bm.main.fpl.templates.CurrencyEditText
            android:id="@+id/materialEditTextNominalTarik"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:layout_marginTop="10dp"
            android:layout_marginBottom="20dp"
            android:hint="@string/hint_tarik_nominal"
            android:imeOptions="actionDone"
            android:inputType="numberDecimal"
            android:textCursorDrawable="@drawable/text_cursor_accent"
            android:textSize="@dimen/textNormal"

            android:fontFamily="@font/roboto_light"
            app:met_baseColor="@color/text_secondary"
            app:met_floatingLabel="highlight"

            app:locale="@string/locale"
            app:met_floatingLabelTextColor="@color/md_black_1000"
            app:met_floatingLabelAnimating="true"
            app:met_accentTypeface="@string/roboto_regular"

            app:met_underlineColor="@color/md_grey_500"
            app:met_primaryColor="@color/colorAccent_ppob"
            app:met_singleLineEllipsis="true"

            />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/button_lanjutkanTarik"
            android:layout_width="match_parent"
            android:layout_height="45dp"

            android:layout_marginBottom="10dp"
            android:background="@drawable/selector_button_red_pressed"
            android:fontFamily="@font/roboto_light"
            android:clickable="true"

            android:focusable="true"
            android:text="@string/lanjutkan"
            android:textAlignment="center"
            android:textAllCaps="false"
            android:textColor="@color/md_white_1000"
            android:textSize="@dimen/textNormal"
            />
<TextView
    android:id="@+id/textViewInfoOtp"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"

    android:gravity="center"
    android:fontFamily="@font/roboto_light"
    android:textSize="@dimen/textNormal"/>


    </LinearLayout>